# Secure-Discord

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  options.html  package-lock.json  package.json  popup.html  tailwind.config.js  vite.config.ts
rust/webcrypto-rng/: Cargo.toml  LICENSE_MIT  README.md
rust/webcrypto-rng/src/: errors.rs  lib.rs
rust/webcrypto-rng/tests/: web.rs
rust/websignal-lib/: Cargo.toml  ProtocolStore.js
rust/websignal-lib/src/: keys.rs  lib.rs  session.rs  stores.rs
src/: manifest.ts  types.ts
src/background/: index.ts
src/contentScript/: css_fix.css  index.ts  stores.ts  styles.css  uiInjection.ts
src/contentScript/components/: SecureButton.svelte  Toasts.svelte  Tooltip.svelte
src/contentScript/utils/: domHelpers.ts
src/options/: Options.svelte  index.ts
src/options/utils/: index.ts
src/popup/: Popup.svelte  index.ts
