[package]
name = "websignal-lib"
version = "0.1.0"
authors = ["Jason Yuan <jason.yuan869@gmail.com>"]
edition = "2021"
description = "A wasm-compatible implementation of Signal's double ratchet protocol."
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
libsignal-protocol = { version = "0.1.0", path = "../../libsignal/rust/protocol/", features = ["wasm"] }
rand = { version = "0.8", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
web-sys = { version = "0.3.66", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
